INCLUDES = -I$(top_srcdir)/src
METASOURCES = AUTO
noinst_LTLIBRARIES = libconfig.la
libconfig_la_SOURCES = Config.cpp DetectorConfig.cpp Exception.cpp \
	Exposition.cpp GSMS.cpp GlobalConfig.cpp Hull.cpp Job.cpp Mask.cpp SceneConfig.cpp \
	Waypoint.cpp
libconfig_la_LIBADD = $(top_builddir)/src/action/libaction.la
noinst_HEADERS = Config.h DetectorConfig.h Exception.h GSMS.h GlobalConfig.h \
	Hull.h Job.h Mask.h SceneConfig.h Waypoint.h
_SOURCES = Exposition.cpp
_SOURCES = Exposition.cpp Exposition.h
_SOURCES = Exposition.cpp Exposition.h Point.h
