INCLUDES = -I$(top_srcdir)/src
METASOURCES = AUTO
noinst_LTLIBRARIES = libdatabase.la
libdatabase_la_SOURCES = Database.cpp Database.h DatabaseField.cpp \
	DatabaseField.h DatabaseIterator.cpp DatabaseIterator.h DatabaseQuery.cpp \
	DatabaseQuery.h DatabaseResult.cpp DatabaseResult.h DatabaseRow.cpp DatabaseRow.h \
	DatabaseTransaction.cpp DatabaseTransaction.h database_exception.h
